fixed the mobile view a little bit, no longer seeing the sun on smaller displays

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -353,7 +353,6 @@ li {
 }
 
 .navDisplay {
-  margin-bottom: 1em;
   height: 307px;
   position: relative;
 }
@@ -361,6 +360,7 @@ li {
 .navDisplay .navBoxGroup {
   position: absolute;
   width: 12em;
+  padding-left: 0.2em;
 }
 
 .navDisplay .navBoxGroup .navBoxes {
@@ -488,6 +488,10 @@ form #user-login-form {
   border-radius: 3px;
 }
 
+.flexslider .flex-direction-nav {
+  display: none;
+}
+
 .flexslider .flexslider_views_slideshow_slide {
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
@@ -499,12 +503,17 @@ form #user-login-form {
   border-radius: 3px;
 }
 
-.flex-direction-nav li .next {
-  right: -5px;
-}
-
-.flex-direction-nav li .prev {
-  left: -5px;
+.flexslider .flex-caption:not(:empty) {
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 1.6em;
+  line-height: 1.1em;
+  font-size: 1.1em;
+  padding-top: 0.9em;
+  text-transform: capitalize;
 }
 
 .flexslider-views-slideshow-main-frame li {
