--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -164,12 +164,12 @@ li {
   //a:hover{border:none;}
 }
 .navDisplay{
-  margin-bottom:1em;
   height:307px;
   position:relative;
   .navBoxGroup{
     position:absolute;
-    width:12em;
+    width: 12em;
+    padding-left: 0.2em;
     .navBoxes{
       .lp-Buttons() 
     }  
@@ -262,6 +262,7 @@ form #user-login-form{
 /*Slider CSS*/
 
 .flexslider{
+.flex-direction-nav{display:none;}
   border:none;
   margin:none;
   .rounded-corners(3px); 
@@ -272,14 +273,19 @@ form #user-login-form{
       .rounded-corners(3px);
     }
   }
-
+  .flex-caption:not(:empty) {
+    background: rgba(0, 0, 0, 0.5);
+    color: rgb(241, 241, 241);
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 1.6em;
+    line-height: 1.1em;
+    font-size: 1.1em;
+    padding-top: 0.9em;
+    text-transform:capitalize;
+  }
 } 
-.flex-direction-nav li .next{
-  right:-5px;
-}
-.flex-direction-nav li .prev{
-  left:-5px;
-}
 .flexslider-views-slideshow-main-frame{
   li{
     display:block;
